# vino-cookiecutter-springboot3

./: .flake8  .pre-commit-config.yaml  README.md  cookiecutter.json  devbox.json  migrate.py  pyproject.toml  requirements-dev.txt
.github/workflows/: test_code_generations.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_comments_regex.py  test_maven_projects.py  test_migrate.py  test_utils.py  utils.py
{{cookiecutter.project_slug}}/: .gitignore  .jqassistant.yml  pom.xml  settings.xml  skaffold.yaml  to_delete.txt
{{cookiecutter.project_slug}}/.github/workflows/: build.yaml  jib_build.yaml
{{cookiecutter.project_slug}}/k8s/base/: kustomization.yaml  vino-demo-svc.yaml
{{cookiecutter.project_slug}}/k8s/envs/dev/: everyone_knows.env  kustomization.yaml
{{cookiecutter.project_slug}}/k8s/envs/prod/: external-secret.yaml  kustomization.yaml
{{cookiecutter.project_slug}}/src/main/java/{{cookiecutter.pkg_path}}/: DemoServiceApplication.java
{{cookiecutter.project_slug}}/src/main/java/{{cookiecutter.pkg_path}}/api/dgs/: CasaAccountDataFetcher.java
{{cookiecutter.project_slug}}/src/main/java/{{cookiecutter.pkg_path}}/api/rest/: HelloController.java  SlowController.java  SlowService.java
{{cookiecutter.project_slug}}/src/main/java/{{cookiecutter.pkg_path}}/config/: BeanMapperConfiguration.java
{{cookiecutter.project_slug}}/src/main/java/{{cookiecutter.pkg_path}}/data/model/: CasaAccount.java  Customer.java
{{cookiecutter.project_slug}}/src/main/resources/: application.yml
{{cookiecutter.project_slug}}/src/main/resources/db/migration/: V1__create_table.sql
{{cookiecutter.project_slug}}/src/main/resources/schema/: schema.graphqls
{{cookiecutter.project_slug}}/src/test/java/{{cookiecutter.pkg_path}}/: ActuatorTests.java  CachedServiceTests.java  GraphQLQueryTests.java  HelloServiceTests.java  JRedisMockConfiguration.java  JpaRepositoryTests.java  MongoDBRepositoryTests.java  MongoDBSeeder.java
{{cookiecutter.project_slug}}/src/test/java/{{cookiecutter.pkg_path}}/test/: ActuatorTests.java  CachedServiceTests.java  GraphQLQueryTests.java  HelloServiceTests.java  JpaRepositoryTests.java  MongoDBRepositoryTests.java
(+2 files in other folders)
