[tool.poetry]
name = "vino-cookiecutter-springboot3"
version = "1.0.1"
description = "Cookiecutter template for generic Sprintboot 3 microservice service"
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.17.32"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cookies = "^0.6.1"
# formatting, linting
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-fixme = "^1.1.1"
flake8-variables-names = "^0.0.5"
pre-commit = "^2.19.0"
types-setuptools = "^57.4.8"
types-toml = "^0.10.3"

[tool.poetry.group.dev.dependencies]
distro = "^1.8.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
